--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -160,8 +160,8 @@ footer {
 }
 
 .participants-list {
-  list-style-type: disc;
-  padding-left: 22px;
+  list-style-type: none;
+  padding-left: 0;
   margin: 0;
 }
 
@@ -169,4 +169,6 @@ footer {
   margin-bottom: 4px;
   color: #222;
   font-size: 0.98em;
+  display: flex;
+  align-items: center;
 }
